tests/paczka1/small_fuzzy/53055201.err
Error in line 7: sxXxz7sF S621 -1,6
Error in line 13: 6Lp9FRZ A573 23,5
Error in line 12: A573 S621 91,8
